# termmind

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  label.yml  mirror.yml  release.yml  stale.yml  welcome.yml
docs/: ARCHITECTURE.md  FAQ.md  SHOWCASE.md
examples/: README.md  basic_usage.py
termind/: __init__.py  api.py  cli.py  commands.py  config.py  context.py  doc_preview.py  file_ops.py  git.py  plugins.py  sessions.py  themes.py
termmind/: __init__.py  api.py  autocomplete.py  cli.py  codegen.py  commands.py  config.py  context.py  cost_optimizer.py  diff_engine.py  doc_preview.py  eli5.py  file_ops.py  git.py  memory.py  plugins.py  promptlib.py  providers.py  recorder.py  refactor.py  security.py  sessions.py  shell.py  snippets.py  templates.py  utils.py  voice.py  webui.py
termmind/agents/: __init__.py  cli.py  engine.py
termmind/core/: __init__.py  cache.py  events.py  exceptions.py  middleware.py
termmind/knowledge/: __init__.py  cli.py  rag.py
tests/: conftest.py  test_agents.py  test_api.py  test_commands.py  test_config.py  test_context.py  test_core_v3.py  test_file_ops.py  test_git.py  test_knowledge.py  test_knowledge_embeddings.py  test_providers.py  test_sessions.py  test_themes.py  test_utils.py  test_webui.py
