[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termmind"
version = "3.0.0"
description = "AI-powered terminal assistant — 9 LLM providers, security scanning, code generation, prompt library, 50+ commands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Rudra Sarker", email = "rudra496@users.noreply.github.com"}]
keywords = ["ai", "cli", "terminal", "llm", "chatbot", "coding", "assistant", "developer-tools", "openai", "anthropic", "gemini", "ollama", "mistral", "cohere", "security-scanner", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
voice = ["pyttsx3>=2.90"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.5",
    "types-click",
]

[project.scripts]
termmind = "termmind.cli:main"

[project.urls]
Homepage = "https://rudra496.github.io/termmind/"
Repository = "https://github.com/rudra496/termmind"
Documentation = "https://rudra496.github.io/termmind/"
Issues = "https://github.com/rudra496/termmind/issues"
Changelog = "https://github.com/rudra496/termmind/releases"

[tool.setuptools.packages.find]
include = ["termmind*"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["termmind"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["termmind"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["termmind"]
omit = ["termmind/voice.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
